istio/telemetry/dynatrace/dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: dynatracelabs
  namespace: istio-system
spec:
  host: arp66353.dev.dynatracelabs.com
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE # initiates HTTPS when accessing edition.cnn.com
